--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,11 @@ jwt:
 token-encryption:
   secret: jm1VmFuwNYtwZFCsCpiKpHIzgZPRrmz7
   salt: CJQyX08Q6W
+spring:
+  datasource:
+    url: jdbc:postgresql://strategy-database.cgvtl9col9kx.us-east-1.rds.amazonaws.com:5432/strategy-clone
+    username: master_user
+    password: 3k1ypt1K
 
 server:
   servlet:
