--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://strategy-database.cgvtl9col9kx.us-east-1.rds.amazonaws.com:5432/strategy
+    url: jdbc:postgresql://strategy-database.cgvtl9col9kx.us-east-1.rds.amazonaws.com:5432/strategy-clone
     username: master_user
     password: 3k1ypt1K
   jpa:
