--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -86,5 +86,5 @@ jobs:
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.render-web-container.outputs.task-definition }}
-          service: strategy-api-clone-service
+          service: strategy-clone-api-svc
           cluster: strategy-clone
